improved visibility of active kegs, fixed beerpong dialog loading

--- a/src/app/modules/sale/components/sale-dashboard/sale-dashboard.component.scss
+++ b/src/app/modules/sale/components/sale-dashboard/sale-dashboard.component.scss
@@ -8,7 +8,6 @@
 
 			&.card-beerpong {
 				.p-card {
-					background-color: var(--orange-900);
 					display: flex;
 					align-items: center;
 
@@ -37,24 +36,25 @@
 	}
 }
 
-.kegs-pointer {
+.kegs-pointer-container {
 	display: flex;
 	position: fixed;
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	border-top: 1px solid var(--surface-50);
-	padding: 1rem;
-	background: var(--surface-0);
+	border-top: 1px solid var(--surface-300);
+	padding: 1.5rem;
+	background: var(--orange-900);
 
 	.keg-pointer-item {
 		flex: 1;
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		font-size: 1.2rem;
 
 		&:not(:last-child) {
-			border-right: 1px solid var(--surface-50);
+			border-right: 1px solid var(--surface-300);
 		}
 	}
 }
